--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         .textbox {
             height: 20px;
         }
+        
+        .textbox2 {
+            height: 40px;
+        }
 
         .textboxlong {
             height: 150px;
@@ -103,7 +107,7 @@
         <div class="split-container">
             <div class="left-content">
                     <label for="curso">Curso:</label>
-                    <textarea type="text" id="curso" class="textbox" required></textarea><br>
+                    <textarea type="text" id="curso" class="textbox2" required></textarea><br>
                     <label for="profesor">Profesor(a):</label>
                     <input type="text" id="profesor" class="textbox" required><br>
                     <label for="evaluacion">Evaluación:</label>
