--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                     <label for="fecha">Fecha:</label>  
                     <input type="text" id="fecha" class="textbox" required><br>
                     <!--    <div id="current-date" class="textbox"></div> <br>    -->
-                    <label for="hora_inicio">Hora inicio:</label>
+                    <label for="hora_inicio">Hora de inicio:</label>
                     <input type="text" id="hora_inicio" class="textbox" required><br>
-                    <label for="hora_fin">Hora fin:</label>
+                    <label for="hora_fin">Hora de fin:</label>
                     <input type="text" id="hora_fin" class="textbox" required><br>
                     <label for="indicaciones">Indicaciones adicionales:</label>
                     <textarea id="indicaciones" class="textboxlong" required></textarea>
